# vader-indo

./: HASIL_ANALISIS_300.md  README_INDONESIA.md  analyze_all_kbbi.py  analyze_kbbi.py  clean_lexicon.py  collect_all_kbbi.sh  integrate_kbbi_to_vader.py  kbbi_booster.txt  kbbi_comprehensive_additions.txt  kbbi_negative.txt  kbbi_negative_words.txt  kbbi_positive.txt  kbbi_positive_words.txt  pyproject.toml  requirements.txt  setup.py  test_300_sentences.py  test_comprehensive.py  test_enhanced.py  test_results_300.json  test_vader_advanced.py  test_vader_indonesia.py
vaderSentiment/: vaderSentiment.py  vaderSentiment_enhanced.py  vader_lexicon_id.txt
